# EtherSPH

./: .gitattributes  .gitignore  LICENSE  README.md
EtherSPH/: CMakeLists.txt  README.md
EtherSPH-JL/: README.md
EtherSPH-JL/draft/: cell_lists.ipynb  dispacth.jl  dispatch.ipynb  readvtp.ipynb  vtk_write.ipynb
EtherSPH-JL/example/CollapseDry/: CollapseDry.jl  CollapseDryComparison.ipynb  readvtp.ipynb
EtherSPH-JL/example/Cruchaga/: Cruchaga.jl  CruchagaComparison.ipynb
EtherSPH-JL/example/Cruchaga3D/: Cruchaga3D.jl  CruchagaComparison.ipynb
EtherSPH-JL/example/LidDrivenCavity/: LidDrivenCavity.jl  LidDrivenCavityRe100.ipynb  LidDrivenCavityRe400.ipynb
EtherSPH-JL/example/Poiseuille2D/: Poiseuille2D.jl  Poiseuille2DComparison.ipynb  readvtp.ipynb
EtherSPH-JL/src/: EtherSPH.jl
EtherSPH-JL/src/DataIO/: DataIO.jl  VTPIO.jl
EtherSPH-JL/src/EquationModel/: EquationModel.jl  LiquidModel.jl
EtherSPH-JL/src/Kernel/: Kernel.jl
EtherSPH-JL/src/KernelFunction/: CubicSpline.jl  Gaussian.jl  KernelFunction.jl  WendlandC2.jl  WendlandC4.jl
EtherSPH-JL/src/Neighbour/: Neighbour.jl
EtherSPH-JL/src/Particle/: Particle.jl  ParticlePool.jl
EtherSPH-JL/src/ParticleAction/: ParticleAction.jl
EtherSPH-JL/src/Solve/: FluidVelocitySolve.jl  FluidWallSolve.jl  InletOutletWallSolve.jl  Solve.jl
EtherSPH-JL/src/TimeDiscretization/: ForwardEuler.jl  TimeDiscretization.jl
EtherSPH-JL/test/EquationModel/: EquationModel.ipynb  EquationModelTest.jl
EtherSPH-JL/test/Kernel/: Kernel.ipynb
EtherSPH-JL/test/KernelFunction/: KernelFunctionTest.ipynb
EtherSPH-JL/test/Neighbour/: Neighbour.ipynb  NeighbourTest.jl
EtherSPH-JL/test/Particle/: Particle.ipynb
EtherSPH-JL/test/ParticleAction/: Interaction.ipynb
EtherSPH-JL/test/Solve/: Solve.ipynb  SolveTest.jl  WaterColumn.ipynb  WaterColumn.jl  readvtp.ipynb
EtherSPH-JL/test/TimeDiscretization/: TimeDiscretization.ipynb  TimeDiscretizationTest.jl
EtherSPH-Notes/Codegen/: CubicSpline_test.ipynb  Gaussian_test.ipynb  WendlandC4_test.ipynb  Wendland_test.ipynb
EtherSPH-Notes/Formula/: formula.tex
EtherSPH-Notes/Reformula/: reformula.tex
EtherSPH-Notes/Slides/Slide0/: .gitignore  ref.bib  slide0.tex
EtherSPH-Notes/Slides/Slide1/: .gitignore  slide1.tex
EtherSPH-Notes/Slides/Slide2/: slide2.tex
EtherSPH-Notes/Slides/Slide3/: .gitignore  (+2 more)
EtherSPH/include/ConstVariable/: ConstMath.hpp  ConstPhysics.hpp  ConstVariable.hpp
EtherSPH/include/Container/: Array.hpp  Container.hpp  NumArray.hpp
EtherSPH/include/KernelFunction/: CubicSpline.hpp  Gaussian.hpp  KernelFunction.hpp  Wendland.hpp  WendlandC4.hpp
EtherSPH/include/Particle/: InteractiveAction.hpp  Particle.hpp  ParticleStruct.hpp  SelfAction.hpp
EtherSPH/include/Solver/: Solver.hpp  WaterWallSolver.hpp
EtherSPH/src/ConstVariable/: CMakeLists.txt  ConstVariable.cpp
EtherSPH/src/Container/: CMakeLists.txt  Container.cpp
EtherSPH/src/KernelFunction/: CMakeLists.txt  CubicSpline.cpp  Gaussian.cpp  KernelFunction.cpp  Wendland.cpp  WendlandC4.cpp
EtherSPH/src/Particle/: CMakeLists.txt  InteractiveAction.cpp  Particle.cpp  SelfAction.cpp
EtherSPH/src/Solver/: CMakeLists.txt  Solver.cpp  WaterWallSolver.cpp
EtherSPH/test/Container/Array/: Array_test.cpp  CMakeLists.txt
EtherSPH/test/Container/NumArray/: CMakeLists.txt  NumArray_test.cpp
EtherSPH/test/KernelFunction/CubicSpline/: CMakeLists.txt  CubicSpline_test.cpp
EtherSPH/test/KernelFunction/Gaussian/: CMakeLists.txt  Gaussian_test.cpp
EtherSPH/test/KernelFunction/Wendland/: CMakeLists.txt  Wendland_test.cpp
EtherSPH/test/KernelFunction/WendlandC4/: CMakeLists.txt  WendlandC4_test.cpp
EtherSPH/test/Particle/InteractiveAction/: CMakeLists.txt  InteractiveAction_test.cpp
EtherSPH/test/Particle/ParticleStruct/: CMakeLists.txt  ParticleStruct_test.cpp
EtherSPH/test/Particle/SelfAction/: CMakeLists.txt  SelfAction_test.cpp
EtherSPH/test/Solver/WaterWallSolver/: CMakeLists.txt  WaterWallSolver_test.cpp
EtherSPHMultiThreads/: Manifest.toml  Project.toml
EtherSPHMultiThreads/docs/: make.jl
EtherSPHMultiThreads/src/: EtherSPHMultiThreads.jl
(+137 files in other folders)
